# deletemyxposts

./: .cursorrules  .gitignore  LICENSE  README.md  get_tokens.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: initial-setup.yml  tweet-deletion.yml  tweet-retrieval.yml
