[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tweet-deletion"
version = "0.1.0"
description = "X (Twitter) Account Cleanup Tool"
requires-python = ">=3.8"
dependencies = [
    "requests-oauthlib>=1.3.1",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
]

[tool.setuptools]
packages = ["tweet_deletion"] 