[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython>=0.29.24",
]
build-backend = "setuptools.build_meta"

[project]
name = "tweet-deletion"
version = "0.1.0"
description = "X (Twitter) Account Cleanup Tool"
requires-python = ">=3.8"
dependencies = [
    "requests-oauthlib>=1.3.1",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "multidict>=4.5.0",
    "yarl>=1.6.0",
    "async-timeout>=4.0.0",
    "attrs>=19.2.0",
    "charset-normalizer>=2.0",
    "idna>=2.0",
    "certifi>=2020.4.5.1",
]

[tool.setuptools]
packages = ["tweet_deletion"] 